--- a/Methane_Meat_app/templates/index.html
+++ b/Methane_Meat_app/templates/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>D3 Final Project</title>
+  <title>Project 2 Meat vs Emissions</title>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="nav">
-    <h2>CO<sub>2</sub> Dashboard</h2>
+    <h2>Methane Emissions CH<sub>4</sub> Dashboard</h2>
     <p>
-      Explore CO<sub>2</sub> emissions by year. 
+      Explore CH<sub>4</sub> emissions by year. 
       Current year: <span id="year-val"></span>
       <input id="year" type="range" step="1">
     </p>
@@ -48,6 +48,8 @@
   </div>
   </section>
   <div class="tooltip"></div>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script> -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script> -->
   <script src="https://d3js.org/d3.v4.js"></script>
   <script src="https://unpkg.com/topojson@3"></script>
   <script src="pie.js"></script>
